QuorumWebsite/examples/Errors/Error4.quorum
number test = 10.4
integer test = 15
repeat until test > 50 times
    test = test + 1
end
